# 42_webserv

./: .clang-format  .gitignore  CGI_UWSGI_DELEGATES.md  CMakeLists.txt  EPOLL_NON_BLOCKING.md  HTTP_1_1_CONFORMANCE.md  Makefile  README.md  auth_info  default.nginx.conf  default.wbsrv  siyoung.wbsrv  test_epoll  test_epoll.cpp  webserv
.github/workflows/: analyze.yml  build_analyze.yml  codacy.yml  codeql.yml  flawfinder.yml
cgi/: cgi_html_gen  cgi_html_gen.cpp
jaejo/: ParsingUtils.cpp  ParsingUtils.hpp  ServerConfig.cpp  ServerConfig.hpp  Webserver.cpp  Webserver.hpp  WebserverConfig.cpp  WebserverConfig.hpp  test.cpp
spool/www/: forbidden.html  index.html  index2.html
spool/www/error/: 400.html  403.html  404.html  500.html
spool/www/hello/: index.html
spool/www/menu/: index.html  test.html
src/: Config_CGI.cpp  Config_CGI.hpp  ParsingUtils.cpp  ParsingUtils.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerSocket.cpp  ServerSocket.hpp  WebserverConfig.cpp  WebserverConfig.hpp  cgi.h  cgi_1_1.cpp  cgi_1_1.h  epoll_kqueue.cpp  epoll_kqueue.h  errors.cpp  errors.h  exceptions.h  file_descriptor.cpp  file_descriptor.h  http_1_1.cpp  http_1_1.h  json.cpp  json.h  main.cpp  map_record.h  result.h  result_refactored.h  uwsgi.cpp  uwsgi.h  uwsgi_client.cpp  uwsgi_client.h  vec.h  webserv.h  wsgi.cpp  wsgi.h
src/cgi/: cgi_html_gen.cpp
src/server/: Client.cpp  Client.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  Session.hpp
src/uwsgi_server/: main.cpp  uwsgi_server.cpp  uwsgi_server.h
